add climate info
